--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "An API that allows you to manage notes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "mocha",
+    "start": "SET NODE_ENV=dev && nodemon server.js"
   },
   "keywords": [
     "Notes",
@@ -15,10 +15,14 @@
   "author": "Ashley Allen",
   "license": "MIT",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^6.1.3",
     "nodemon": "^1.18.11"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "config": "^3.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.1"
   }
