--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "description": "An API that allows you to manage notes",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atjallen/notesapi.git"
+  },
   "scripts": {
     "test": "mocha",
-    "start": "SET NODE_ENV=dev && nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "Notes",
@@ -22,7 +26,6 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "config": "^3.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.1"
   }
